# qwen3_apple_style_2bit_qat_lora

./: .gitignore  ANEMLL-QUANT-CLI.md  AQ1.md  CLAUDE.md  CMD_TRAIN.md  README.md  notebooks\Qwen3_QAT_KD_LoRA-per-layer.ipynb  pyproject.toml  requirements.txt
docs/: GEMMA3_AQ1_NOQAT_RUNBOOK.md  TPU.md
notebooks/: Anemll_LayerByLayer_QAT-2b.ipynb  Anemll_LayerByLayer_QAT.ipynb  Anemll_LayerByLayer_QAT_4_mlp.ipynb  Anemll_V1_to_V2_Convert_Finetune.ipynb  Anemll_V1_to_V2_Convert_Finetune_Fp16.ipynb  Anemll_V1_to_V2_Q2A4_STE_FP16.ipynb  Anemll_V2_FP16_Training.ipynb  Anemll_V2_LayerByLayer_QAT_4_mlp.ipynb  GCS_Drive_Sync.ipynb  Generate_KD_Cache_K64_K128.ipynb  Generate_KD_Cache_Qwen32B_All3.ipynb  Generate_KD_Cache_WikiText103_L1024.ipynb  Perplexity_Measurement.ipynb  Qwen3_0.6B_QAT_2b4b_KD_LoRA.ipynb  Qwen3_2bit_Improved_v1.ipynb  Qwen3_4bit_KD_LoRA_K64_K128.ipynb  Qwen3_QAT_KD_LoRA-org.ipynb  Qwen3_QAT_KD_LoRA-per-layer-2bit.ipynb  Qwen3_QAT_KD_LoRA-per-layer.ipynb  Qwen3_QAT_KD_LoRA.ipynb  Qwen3_QAT_KD_LoRA_per_layer_2bit-fresh.ipynb  README.md  SR-010_Recovery_LoRA_Training.ipynb  SR-011_AQ1_From_Scratch.ipynb  SR-012_LUT_Candidate_Analysis.ipynb  TPU_LoRA_KD_WikiText1024.ipynb  TPU_Training_Test copy.ipynb  TPU_Training_Test.ipynb  TorchAO_Int4_PerTensor.ipynb  V2_Training_Terminal.ipynb  debug_lut_training.ipynb
qat_lora/: __init__.py  ane_qat_linear.py  ane_qat_linear_v2.py  auto_snap_mags.py  callbacks.py  data.py  ema.py  layer_qat.py  local_kd.py  mem_debug.py  mixed_precision.py  model_utils.py  (+4 more)
qat_lora.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+89 files in other folders)
