[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qat-lora"
version = "0.0.0"
description = "Apple-style 2-bit QAT + LoRA recovery for Qwen/Qwen3-0.6B"
authors = [{ name = "QAT LoRA" }]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.51.0",
  "datasets>=2.18.0",
  "accelerate>=0.33.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
  "packaging>=23.2",
]

[tool.setuptools]
packages = ["qat_lora"]
